--- a/frontend/src/components/JobListingCard.module.css
+++ b/frontend/src/components/JobListingCard.module.css
@@ -1,29 +1,50 @@
+.jobListingsWrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 45%;
+}
+
 .jobListingCardWrapper {
+  overflow-y: scroll;
+}
+
+.jobSearchQueryHeader h4 {
+  margin: 0;
+  padding: 16px;
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: white;
+  background-color: #f43f7f;
+}
+
+.jobListingCard {
+  /* height: 220px; */
   display: grid;
   grid-template-columns: 1fr 3fr;
-  height: 240px;
   overflow: hidden;
-  border: 1px solid rgb(175, 175, 175);
-  border-radius: 10px;
+  border: 1px solid #dbdbdb;
+  border-top: none;
+  border-right: none;
   padding: 1rem;
   transition: border-color 0.3s;
 }
 
-.jobListingCardWrapper.clicked {
-  border-color: #f43f7f;
-}
-
-.jobListingCardWrapper:hover {
+.jobListingCard:hover {
   cursor: pointer;
 }
 
-.jobListingCardWrapper:hover .jobListingTitle {
+.jobListingCard:hover .jobListingTitle {
   color: #f43f7f;
   text-decoration: underline;
 }
 
+.jobListingCard.clicked {
+  border-left: 5px solid #f43f7f;
+  background-color: #fff4f8;
+}
+
 .employerLogo {
-  width: 90px;
+  width: 70px;
   height: auto;
   object-fit: contain;
   justify-self: center;
@@ -49,18 +70,16 @@
 
 .jobListingTitle {
   font-weight: 550;
-  font-size: 1.2rem;
-  /* color: #0073b1; */
+  font-size: 1rem;
 }
 
 .jobListingEmployerName {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .jobListingLocation {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #5f5f5f;
-  margin-bottom: 0.5rem;
 }
 
 .jobListingKeywords {
@@ -69,7 +88,7 @@
   padding: 0;
   gap: 8px 8px;
   list-style: none;
-  margin: 10px 0;
+  margin: 5px 0 10px 0;
 }
 
 .jobListingKeywords li {
@@ -85,20 +104,23 @@
 .jobListingPreviewText {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 3;
   overflow: hidden;
-  list-style: circle;
   padding-left: 15px;
 }
 
 .jobListingPreviewText li {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: #5f5f5f;
 }
 
+.jobListingPreviewText li::marker {
+  color: rgb(109, 108, 108);
+}
+
 .jobListingPostedDate {
-  align-self: end;
   margin-top: 10px;
+  align-self: end;
   font-size: 0.9rem;
   font-weight: 450;
   color: #5f5f5f;
