--- a/frontend/src/components/SearchBar.module.css
+++ b/frontend/src/components/SearchBar.module.css
@@ -76,7 +76,9 @@
   white-space: nowrap;
   display: flex;
   gap: 8px;
-  font-size: 0.85rem;
+  font-size: 0.95rem;
+  font-weight: 450;
+  color: rgb(48, 48, 48);
 }
 
 .searchParamButtonsWrapper button:hover {
@@ -102,7 +104,7 @@
 .menu label {
   white-space: nowrap;
   padding: 5px 10px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 }
 
 .menu label:hover {
